testing config file

--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ nav_exclude:                                            # The following paths ar
 
 ### Author Info ###
 author:
-  name              : John Doe
+  name              : Elliott Hong
   image             : https://i.imgur.com/uyDNQnn.jpg
   behance           : your_username
 # dribbble          : your_username
-  email             : username@domain.com
-  facebook          : your_username
-  github            : your_username
+  email             : tjdgus3174@gmail.com
+# facebook          : your_username
+  github            : elliottHong
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
