--- a/_data/other-skills.yml
+++ b/_data/other-skills.yml
@@ -1,7 +1,2 @@
-- name: Adobe Photoshop
-  percentage: 95
-  color: info
-
-- name: Adobe Illustrator
-  percentage: 90
-  color: success
+- name: Cisco IOS
+  color : light
