--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,5 +1,5 @@
 - title: Student, DigiPen Institute of Technology
-  from: 2016
+  from: Sep 2016
   to: 2023 (Expected)
   description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
 
