--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,6 +4,6 @@
   description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
 
   - title: Staff Sergent, Republic of Korea Army
-  from: 2018
-  to: 2021
+  from: Oct 2018
+  to: Jan 2021
   description: I worked as network manager at 53rd Infantry Division
