--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -3,3 +3,7 @@
   to: 2023 (Expected)
   description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
 
+  - title: Staff Sergent, Republic of Korea Army
+  from: Oct 2018
+  to: Jan 2021
+  description: I worked as network manager at 53rd Infantry Division
