--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,9 +1,5 @@
-- title: Student, DigiPen Institute of Technology
-  from: Sep 2016
-  to: 2023 (Expected)
-  description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
 
-  - title: Staff Sergent, Republic of Korea Army
-  from: Oct 2018
-  to: Jan 2021
-  description: I worked as network manager at 53rd Infantry Division
+- title: Student, Digipen institute of technology
+  from: 2017
+  to: Apr. 2022
+  description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
