--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,5 +1,17 @@
 
 - title: Student, Digipen institute of technology
-  from: 2017
-  to: Apr. 2022
+  from: Sep 2016
+  to: Apr 2023 (Expected)
   description: Bachelor of Science in Computer Science in Real-Time Interactive Simulation
+
+  - title: B.E. in Electronics and Communication, R.V. College of Engineering
+  from: Aug 2013
+  to: Jun 2017
+  description: |+
+        <h5>GPA - 9.04/10.0</h5> 
+        <h5>Student Placement Coordinator (2016-2017)</h5><br />
+        <h6><strong>Courses:</strong></h6>
+        - <h5 style="display:inline">A</h5>dvanced Processors<br />
+        - <h5 style="display:inline">C</h5>loud Computing<br />
+        - <h5 style="display:inline">J</h5>ava and J2EE<br />
+        - <h5 style="display:inline">R</h5>eal-Time Operating Systems<br />
