updated my icon

--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ author:
 # gitlab            : your_username
   instagram         : s__hongg
 # kaggle            : your_username
-# linkedin          : your_username
-#  medium            : your_username
+ linkedin           : elliott-hong-3a8244210/
+#  medium           : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
