--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 # gitlab            : your_username
   instagram         : s__hongg
 # kaggle            : your_username
- linkedin           : elliott-hong-3a8244210/
+# linkedin          : elliott-hong-3a8244210/
 #  medium           : your_username
 # soundcloud        : your_username
 # spotify           : your_username
