--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Elliott Hong
-# image             : https://i.imgur.com/uyDNQnn.jpg
+  image             : "/assets/image/mainPic.jpg"
 # behance           : your_username
 # dribbble          : your_username
   email             : tjdgus3174@gmail.com
