--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title               : Elliott Hong
 description         : >-
                       "Work in progress"
-#baseurl             : "/portfolYOU"                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
+#baseurl            : ""                     # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : elliottHong/elliottHong.github.io     # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : YoussefRaafatNasry/portfolYOU
 
